# SehatSaathi

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: base_agent.py  diagnosis_agent.py  lifestyle_agent.py  medication_agent.py  risk_agent.py  voice_agent.py
backend/app/api/v1/: agents.py  auth.py  documents.py  router.py  sessions.py  users.py  webhooks.py
backend/app/core/: dependencies.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/guardrails/: emergency_detector.py  language_rail.py  medical_rail.py
backend/app/models/: agent_verdict.py  document.py  emergency_contact.py  session.py  user.py
backend/app/schemas/: agent.py  document.py  session.py  user.py
backend/app/services/: agent_orchestrator.py  auth_service.py  document_service.py  email_service.py  guardrail_service.py  livekit_service.py  location_service.py  ocr_service.py  user_service.py
backend/app/utils/: file_utils.py  language_utils.py  response_utils.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_documents.py  test_guardrails.py
docs/: backend-prd.md
