[project]
name = "sehat-saathi-backend"
version = "0.1.0"
description = "AI-powered rural health guidance platform — backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.5.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.35.0",
    "groq>=0.11.0",
    "openai>=1.50.0",
    "livekit-api>=0.7.0",
    "livekit-agents>=0.8.0",
    "livekit-plugins-openai>=0.8.0",
    "livekit-plugins-groq>=0.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "aiosmtplib>=3.0.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "email-validator>=2.2.0",
    "pymongo>=4.9.0",
    "python-dotenv>=1.0.0",
    "botocore>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
